<resources>
    <string name="app_name">CoffeeManager</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="hint_password">password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_reset_password">Reset password</string>
    <string name="text_confirm_password">confirm password</string>
    <string name="title_coffee_manager">Coffee Manager</string>
    <string name="text_send_to_email">Send to email</string>
    <string name="text_menu_coffee">Menu Coffee</string>
    <string name="text_table">Table</string>
    <string name="text_more">More</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_about_coffee">About Coffee</string>
    <string name="text_logout">Logout</string>
    <string name="text_drink_americano">Americano</string>
    <string name="text_purchases">Purchases</string>
    <string name="text_number_table">Table %1$s</string>
    <string name="text_pay">Pay</string>
    <string name="text_done">Done</string>
    <string name="text_order">Order</string>
    <string name="text_repair">Edit Order</string>
    <string name="text_description">Description</string>
    <string name="text_price">Price</string>
    <string name="text_title_detail">Coffee Detail</string>
    <string name="text_edit_coffee_infomation">Edit Coffee Infomation</string>
    <string name="text_remove_coffee">Remove Coffee</string>
    <string name="text_coffee_name">Coffee Name</string>
    <string name="text_description_coffee">Description Coffee</string>
    <string name="text_price_coffee">Price Coffee</string>
    <string name="text_save">Save</string>
    <string name="text_content">Content</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_message_confirm_password">Confirm Password is not correct</string>
    <string name="text_mesage_email_empty">Email is empty</string>
    <string name="text_message_password_empty">Password is empty</string>
    <string name="text_message_confirm_empty">Confirm is empty</string>
    <string name="text_message_email_valid">Email is not Valid</string>
    <string name="text_edit_drink_title">Edit Drink Coffee</string>
    <string name="text_add_drink_title">Add Drink Coffee</string>
    <string name="text_message_name_empty">Name is empty</string>
    <string name="text_message_description_empty">Description is empty</string>
    <string name="text_message_price_empty">Price is empty</string>
    <string name="text_message_post_success">Post is success</string>
    <string name="text_message_edit_success">Edit is success</string>
    <string name="text_message_delete_success">Delete is success</string>
    <string name="text_message_delete_failure">Delete is failure</string>
    <string name="text_title_bill">The coffee</string>
    <string name="text_time_bill">Time: %1$s</string>
    <string name="text_number_bill">Bill: %1$d</string>
    <string name="text_employee_bill">Employee: %1$s</string>
    <string name="text_total_bill">Total: </string>
    <string name="text_order_title">Order Coffee</string>
    <string name="text_example">Example</string>
    <string name="text_menu">Menu</string>
    <string name="text_message_post_failure">Post is failure</string>
    <string name="text_name">name</string>
    <string name="text_title_edit_order">Edit Order</string>
    <string name="text_title_pay">Pay Order Bill</string>
    <string name="text_manager_employee">Employee Manager</string>
    <string name="text_revenue_manager">Revenue manager</string>
    <string name="text_sign_up_employee">Sign Up Employee</string>
    <string name="text_drink_coffee">Coffee Manager</string>
    <string name="text_name_user">Name User</string>
    <string name="text_email_user">Email User</string>
    <string name="text_birth_day">Birth Day</string>
    <string name="text_phone_user">Phone User</string>
    <string name="text_address_user">Address User</string>
    <string name="text_employee_name_example">Employee Name: %1$s</string>
    <string name="text_phone_number">Phone Number: %1$s</string>
    <string name="text_title_employee_manger">Employee Manager</string>
    <string name="text_profile">Profile Employee</string>
    <string name="text_position">Position</string>
    <string name="text_remove_employee">Remove Employee</string>
    <string name="text_employee">employee</string>
    <string name="text_search_date">Search Date</string>
    <string name="text_total_bill_manger">Total Bill: %1$s</string>
    <string name="text_total_money_manager">Total Money: %1$s</string>
    <string name="text_date">Date: %1$s</string>
    <string name="text_total_only_bill">Total: %1$s</string>
    <string name="text_bill_detail">Bill Detail</string>
    <string name="text_title_revenue_manager">Revenue Manager</string>
    <string name="text_search_drink">Search Drink</string>
    <string name="text_reset_password_title">Reset Password</string>
    <string name="text_message_reset_success">Reset is success</string>
    <string name="text_order_bartender">Order Bartender</string>
    <string name="table_manager">Table Manager</string>
    <string name="total_order">%1$s$</string>
    <string name="date">%1$s/%2$s/%3$s</string>
    <string name="table_default">0</string>
    <string-array name="position">
        <item>employee</item>
        <item>bartender</item>
    </string-array>
</resources>
